    * Add: apc_rackpdu_status - monitor the power consumption on APC rack PDUs
    * Add: sym_brightmail_queues - monitor the queue levels on Symantec Brightmail mail scanners.
    * Add: plesk_domains - List domains configured in plesk installations
    * Add: plesk_backups - Monitor backup spaces configured for domains in plesk
    * FIX: zfsget: fix exception on snapshot volumes (where available is '-')
    * FIX: loading notification scripts in local directory for real
    * FIX: oracle_version: return valid check result in case of missing agent info
    * FIX: apache_status: fixed bug with missing 'url', wrote man page
    * Add: flexible notifcations: filter by hostname
    * FIX: fixed missing localisation in check_parameteres.py 

    Multisite:
    * Implemented LDAP integration of Multisite. You can now authenticate your
      users using the form based authentication with LDAP. It is also possible
      to synchronize some attributes like mail addresses, names and roles from
      LDAP into multisite.
    * Modularized the authentication and user management code in WATO
    * Restructured cookie auth cookies (all auth cookies will be invalid
      after update -> all users have to login again)
    * Modularized login and cookie validation
    * Logwatch: Added buttons to acknowledge all logs of all hosts or really
      all logs which currently have a problem
    * Check reschedule icon now works on services containing an \
    * Now showing correct representation of SI unit kilo ( k )
    * if perfometer now differs between byte and bit output
    * FIX: warn / crit levels in if-check when using "bit" as unit
    * Use pprint when writing global settings (makes files more readable)
    * New script for settings/removing downtimes: doc/treasures/downtime
    * New option when setting host downtimes for also including child hosts
    * FIX: Fixed changing own password when notifications are disabled